Added missing ScrollPane.java to svn. Fixed parts of bug 1871460. Additions to help files for JavaObject and JSCWindow.

--- a/SuperCollider/todo.txt
+++ b/SuperCollider/todo.txt
@@ -8,16 +8,11 @@ JStethoscope gridColor
 
 HiliteGradient
 
-JSCScrollPane
-
-id  should be a field instead of a property, should be read-only
-
 should get rid of jinsets, and manage all this trickery on the server side
 
 drag : file list --> pathname
 
-composite and h/vlayoutviews inside scrollpane and tabbed pane should _not_ have 3,3,3,3 insets
-; also maybe not on topview (more efficient?)
+composite and h/vlayoutviews inside tabbed pane should _not_ have 3,3,3,3 insets
 
 movie view, soundfile view etc. : remove pseudo setProperty calls
 
