corrected SVN version in readme. this revision corresponds to the v0.59 packaged release.

--- a/SuperCollider/todo.txt
+++ b/SuperCollider/todo.txt
@@ -1,16 +1,11 @@
-proper default font for windows
-
-
-nachrangig
-==========
+minor things
+============
 
 JStethoscope gridColor
 
 HiliteGradient
 
 should get rid of jinsets, and manage all this trickery on the server side
-
-drag : file list --> pathname
 
 composite and h/vlayoutviews inside tabbed pane should _not_ have 3,3,3,3 insets
 
